Code analysis fix